--- a/web/assets/css/c4.css
+++ b/web/assets/css/c4.css
@@ -120,12 +120,16 @@ header.main {background:#f0f0f0; padding:20px 0 25px; margin-bottom:20px; border
 
 /*=== C4 Board ===*/
 #game-board {position: relative; height:100%; overflow: hidden; height:384px;}
+/*
 #c4-board {background: url('../images/c4-board/empty-board.png') no-repeat; z-index: 10;}
 #c4-moves {z-index: 9;}
 #c4-board, #c4-moves {position: absolute; display: block; height:384px; background-size:100%; top:0; width:100%;}
 	#c4-moves .p1, #c4-board .p2 {height:64px; width:64px; position: absolute;}
 	#c4-moves .p1 {background: url('../images/c4-board/player1.png') no-repeat; background-size:100%;}
 	#c4-moves .p2 {background: url('../images/c4-board/player2.png') no-repeat; background-size:100%;}
+	*/
+#c4-board {position: absolute; display: block; background-size:100%; top:0; height:100%; width:100%;}
+.c4-move {z-index: 10; }
 
 
 /*=== Status Messages ===*/
