--- a/web/assets/css/reset-start.css
+++ b/web/assets/css/reset-start.css
@@ -105,7 +105,7 @@ sub { bottom: -0.25em; }
 pre {
   /* www.pathf.com/blogs/2008/05/formatting-quoted-code-in-blog-posts-css21-white-space-pre-wrap/ */
   white-space: pre; white-space: pre-wrap; word-wrap: break-word;
-  padding: 15px;
+  padding: 4px 0;
 }
 
 textarea { overflow: auto; resize: none; } /* www.sitepoint.com/blogs/2010/08/20/ie-remove-textarea-scrollbars/ */
